--- a/layouts/bot/section.html.html
+++ b/layouts/bot/section.html.html
@@ -4,24 +4,26 @@
     <article class="center cf pv5 ph3 ph4-ns mw7">
       <header>
         <h1 class="f1">
-          {{ .Title }}
+          {{ .Title |safeHTML}}
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links {{ $.Param "text_color" | default "mid-gray" }}">
         {{ .Content }}
-      </div>
-      
+      </div><br>
       {{if .Params.yes}}
-      <a href="{{relref . (.Param "yes") }}">Yes</a>
+      <a class="button yes" href="{{relref . (.Param "yes") }}">Yes &check;</a>
       {{end}}
       
       {{if .Params.no}}
-      <a href="{{relref . (.Param "no") }}">No</a>
+      <a class="button no" href="{{relref . (.Param "no") }}">No X</a>
       {{end}}
     
       {{if .Params.next}}
-      <a href="{{relref . (.Param "next") }}">Next</a>
+      <a class="button next" href="{{relref . (.Param "next") }}">Next</a>
       {{end}}
+
+      {{if .Params.Invaders}}{{partial "bot/invaders.html" .}} {{end}}
+      {{if .Params.MAC}} {{partial "bot/mac.html" .}} {{end}}
 
     </article>
   </div>
