--- a/assets/ananke/css/my_style.css
+++ b/assets/ananke/css/my_style.css
@@ -1,13 +1,19 @@
 a.button {
     display: inline-block;
-    color: white;
+    color: black;
+    border-color: black;
+    border: 1px;
+    background-color: darkgray;
     padding: 15px 25px;
     text-decoration: none;
 }
 a.yes {
     background-color: darkgreen;
+    color: white;
+
 }
 a.button.no {
+    color: white;
     background-color: darkred;
 }
 a.button.next {
